syntax = "proto3";
package main;

message Test2 {
  string id = 1;
  uint64 createdAt = 2;
  uint64 updatedAt = 3;
  string text = 4;
  bool isPublic = 5;
}

message Test2CreateOneInput {
  string text = 2;
}

service Test2Service {
  rpc CreateOne (Test2CreateOneInput) returns (Test2) {}
}
